--- a/templates/index.html
+++ b/templates/index.html
@@ -309,6 +309,9 @@
             <div class="mt-2">
                 <span class="session-controls">Runde <span id="round-number">{{ round_number }}</span></span>
             </div>
+            <form action="{{ url_for("previous_round") }}" method="post" class="mt-2">
+                <button type="submit" class="btn btn-primary session-controls">Vorherige Runde</button>
+            </form>
             <form action="{{ url_for("next_round") }}" method="post" class="mt-2">
                 <button type="submit" class="btn btn-primary session-controls">Nächste Runde</button>
             </form>
