--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Team hinzufügen</button>
                     </form>
+                    <button id="test-sound-btn" type="submit" class="btn btn-primary">Test Sounds</button>
                 </div>
             </div>
         </div>
@@ -148,8 +149,8 @@
     </div>
 </div>
 </div>
-<span>Last Buzzer Ping:</span>
-<span>{{ last_buzzer_ping }}</span>
+<span>Last Buzzer Push:</span>
+<span>{{ last_buzzer_push_time }}</span>
 {% endblock %}
 
 {% block additionaljavascript %}
